--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 crewai>=1.0.0
+crewai-tools>=1.0.0
 openai>=1.0.0
 google-search-results>=2.4.2
 python-dotenv>=1.0.0
 langchain>=0.1.0
 langchain-openai>=0.0.2
 schedule>=1.2.0
+serpapi>=0.1.5
 
